@@ -2928,8 +2928,8 @@ pass_partition_blocks::gate (function *fun)
 {
   /* The optimization to partition hot/cold basic blocks into separate
      sections of the .o file does not work well with linkonce or with
-     user defined section attributes.  Don't call it if either case
-     arises.  */
+     user defined section attributes or with naked attribute.  Don't call
+     it if either case arises.  */
   return (flag_reorder_blocks_and_partition
 	  && optimize
 	  /* See pass_reorder_blocks::gate.  We should not partition if
@@ -2937,6 +2937,7 @@ pass_partition_blocks::gate (function *fun)
 	  && optimize_function_for_speed_p (fun)
 	  && !DECL_COMDAT_GROUP (current_function_decl)
 	  && !lookup_attribute ("section", DECL_ATTRIBUTES (fun->decl))
+	  && !lookup_attribute ("naked", DECL_ATTRIBUTES (fun->decl))
 	  /* Workaround a bug in GDB where read_partial_die doesn't cope
 	     with DIEs with DW_AT_ranges, see PR81115.  */
 	  && !(in_lto_p && MAIN_NAME_P (DECL_NAME (fun->decl))));
